--- a/moigioinhatro/pom.xml
+++ b/moigioinhatro/pom.xml
@@ -76,9 +76,16 @@
 			<version>5.4.24.Final</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.25.Final</version>
+		</dependency>
+
 	</dependencies>
 	<properties>
-		<jersey.version>3.0.0</jersey.version>
+		<jersey.version>2.32</jersey.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
